@startuml
!theme plain
skinparam class {
    BackgroundColor<<Interface>> #A9DCDF
    BackgroundColor<<Enum>> #FFD966
    BackgroundColor<<Exception>> #FF9999
    BackgroundColor<<Class>> #D5E8D4
}

package robos #DAF7A6 {
    interface Ladrao <<Interface>> {
        + roubar()
    }

    enum EstadoRobo <<Enum>> {
        LIGADO
        DESLIGADO
        MORTO
    }

    class Robo {
        - posição: Point
        - direção: String
        - estado: EstadoRobo
        - bateria: int
        + mover()
        + roubar()
        + executarTarefa()
    }

    class RoboAereo {
        - altitude: int
        + subir()
        + descer()
    }

    class RoboAleatorio {
        + moverAleatório()
        + explodir()
    }

    class RoboAtirador {
        - arma: String
        + atirar()
        + encherOSaco()
        + acionarSensores()
    }

    class RoboTerrestre {
        - velocidadeMaxima: int
        + moverComVelocidade()
    }

    class RoboDesligadoException <<Exception>> {}
    class RoboNotFoundException <<Exception>> {}
    class TaskNotFoundException <<Exception>> {}
}

' External references
interface "Entidade" as Entidade #D4C2FC
interface "Comunicavel" as Comunicavel #FFE6CC
class "Sensor" as Sensor #FFCC99
class "Ambiente" as Ambiente #CCF2FF
class "ColisaoException" as ColisaoException #FFF2CC
class "ForaMapaException" as ForaMapaException #CCF2FF

' Relationships
RoboAereo --|> Robo
RoboAleatorio --|> RoboAereo
RoboAtirador --|> RoboAereo
RoboTerrestre --|> Robo

Robo ..|> Entidade
Robo ..|> Ladrao
RoboAereo ..|> Comunicavel
RoboTerrestre ..|> Comunicavel
RoboAtirador ..|> Comunicavel
Robo ..> RoboDesligadoException
Robo ..> TaskNotFoundException
Robo ..> ColisaoException
Robo ..> ForaMapaException
RoboAtirador --> Sensor: uses
Robo --> Ambiente: uses
@enduml